PGOV-971 Fix filter button for facets on mobile screens

--- a/web/themes/custom/cloudy/src/layouts/drawer/drawer.scss
+++ b/web/themes/custom/cloudy/src/layouts/drawer/drawer.scss
@@ -84,21 +84,32 @@ $overlay-transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out,
   &__open,
   &__close {
     background: $cloudy-color-neutral-200;
-
+    
     .icon {
       color: $cloudy-color-neutral-900;
     }
-
+    
     &:hover {
       background: $cloudy-color-neutral-300;
     }
-
+    
     [dir="rtl"] &--position-end, [dir="ltr"] &--position-start {
       margin-right: auto;
+      left: 1rem;
     }
-
+    
     [dir="rtl"] &--position-start, [dir="ltr"] &--position-end {
       margin-left: auto;
+      right: 1rem;
+    }
+  }
+  
+  &__open {
+    position: absolute;
+  }
+  @include media-breakpoint-down(md) {
+    &__open {
+      top: 5rem;
     }
   }
 
